fix: field errors alignments

--- a/server/static_src/scss/styles.scss
+++ b/server/static_src/scss/styles.scss
@@ -74,6 +74,8 @@ pre, ol, ul, dl {
 .errorlist {
     color: $ztl-red;
     font-weight: bold;
+    padding-left: 1em;
+    padding-bottom: 1em;
 }
 
 legend {
